--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -2,8 +2,8 @@ server {
     listen       443 ssl;
     listen  [::]:443 ssl;
     server_name  ${SSL_HOSTNAME};
-    ssl_certificate /etc/nginx/certs/live/${SSL_HOSTNAME}/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/live/${SSL_HOSTNAME}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${SSL_HOSTNAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SSL_HOSTNAME}/privkey.pem;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
